# annihilation-llm

./: .gitignore  README.md  config.default.toml  config.nohumor.toml  config.noslop.toml  config.strict-refusals.toml  install.ps1  install.sh  logo.txt  pyproject.toml  start.bat  start.sh  uninstall.ps1  uninstall.sh  verify_env.py  verify_env_linux.py  verify_env_windows.py
.gemini/: styleguide.md
.github/: dependabot.yml
.github/workflows/: auto-merge-dependabot.yml  ci.yml  publish-github-package.yml  release.yml  semantic-pr.yml  sync-upstream.yml
notebooks/: colab_free_t4_annihilate_smolLM2_1_7B.ipynb
src/annihilate/: analyzer.py  config.py  main.py  model.py  repair.py  reproduce.py  system.py  utils.py
src/annihilation/: analyzer.py  config.py  evaluator.py  main.py  model.py  progress.py  reproduce.py  system.py  utils.py
src/heretic/: config.py  main.py  model.py  reproduce.py  system.py  utils.py
tui/: Cargo.toml
tui/src/: app.rs  events.rs  main.rs  parser.rs  subprocess.rs  sysinfo.rs  theme.rs
