[project]
name = "annihilate-llm"
version = "1.3.9"
description = "Fully automatic censorship removal for language models"
readme = "README.md"
license = "AGPL-3.0-or-later"
authors = [
    { name = "Philipp Emanuel Weidmann", email = "pew@worldwidemann.com" }
]
requires-python = ">=3.10"
keywords = ["llm", "transformer", "abliteration"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Environment :: GPU",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "accelerate~=1.13",
    "datasets>=4.7,<6.0",
    "huggingface-hub~=1.7",
    "immutabledict~=4.3",
    "langdetect~=1.0",
    "lm-eval[hf]~=0.4",
    "numpy~=2.2",
    "optuna~=4.7",
    "peft~=0.19",
    "psutil~=7.2",
    "py-cpuinfo~=9.0",
    "pydantic-settings~=2.13",
    "questionary~=2.1",
    "rich>=14.3,<16.0",
    "tomli-w~=1.2",
    "tqdm~=4.67",
    "transformers[kernels]~=5.6",
]

[project.optional-dependencies]
bnb = [
    "bitsandbytes~=0.49",
]
research = [
    "geom-median~=0.1",
    "imageio~=2.37",
    "matplotlib~=3.10",
    "pacmap~=0.8",
    "scikit-learn~=1.7",
]

[dependency-groups]
dev = [
    "ruff>=0.14.5",
    "ty>=0.0.5",
]

[project.urls]
Homepage = "https://github.com/tjcrims0nx/annihilation-llm"
Documentation = "https://github.com/tjcrims0nx/annihilation-llm"
Repository = "https://github.com/tjcrims0nx/annihilation-llm.git"
Issues = "https://github.com/tjcrims0nx/annihilation-llm/issues"
Changelog = "https://github.com/tjcrims0nx/annihilation-llm/releases"

[project.scripts]
annihilate = "annihilate.main:main"
annihilation = "annihilate.main:main"

[build-system]
requires = ["uv_build>=0.8.11,<0.9.0"]
build-backend = "uv_build"

[tool.uv]
exclude-newer = "7 days"

[tool.uv.build-backend]
module-name = "annihilate"
