[package]
name = "annihilate"
version = "0.1.0"
edition = "2024"
description = "Beautiful neon TUI frontend for Annihilation LLM"

[dependencies]
ratatui = { version = "0.29", features = ["crossterm"] }
crossterm = { version = "0.28", features = ["event-stream"] }
tokio = { version = "1", features = ["full"] }
color-eyre = "0.6"
unicode-width = "0.2"
arboard = "3.6.1"
